tracking a new file that will use the tensorflow model to do dam bounding box inference

--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -17,14 +17,33 @@ COPY install-pip-packages.sh .
 
 # build the python environments for 3.6 and 3.7 using conda, pip, and
 # python setup.py install
-RUN /bin/bash -c "\
-    conda create -y --name py37 python=3.7 \
-    && conda clean -a -y"
-RUN /bin/bash -c "conda run -v -n py37 conda install -c conda-forge gdal=2.4.1"
-RUN /bin/bash ./install-pip-packages.sh 3 7
+SHELL ["/bin/bash", "-c"]
 
-RUN hg clone http://bitbucket.org/natcap/pygeoprocessing
-WORKDIR pygeoprocessing
-RUN hg update develop
-RUN /bin/bash -c "conda run -v -n py37 python3 setup.py install"
-RUN /bin/bash -c "conda run -v -n py37 pip install tensorflow retrying requests taskgraph flask pillow"
+RUN conda create -y --name py37 python=3.7 && conda clean -a -y
+RUN conda run -v -n py37 conda install -c conda-forge gdal=2.4.1 && conda clean -a -y
+RUN conda run -v -n py37 pip install --no-cache-dir \
+    cython \
+    ecoshard \
+    flask \
+    pytest \
+    pytest-cov \
+    mock \
+    numpy \
+    pillow \
+    requests \
+    retrying \
+    rtree \
+    scipy \
+    setuptools-scm \
+    shapely \
+    sympy \
+    taskgraph \
+    tensorflow && conda clean -a -y
+
+RUN conda init bash && echo "source activate py37" > ~/.bashrc
+
+RUN hg clone http://bitbucket.org/natcap/pygeoprocessing /usr/local/pygeoprocessing
+WORKDIR /usr/local/pygeoprocessing
+RUN hg update 1.8.0 && conda run -v -n py37 python setup.py install
+WORKDIR /workspace
+ENTRYPOINT ["/bin/bash", "-l", "-c"]
