--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -4,5 +4,4 @@ FROM tensorflow/tensorflow:1.12.0-gpu-py3
 COPY fasterRCNN_08-26-withnotadams.pb /var/models/fasterRCNN_08-26-withnotadams.pb
 COPY tensorflow_inference_server.py /workspace/tensorflow_inference_server.py
 WORKDIR /workspace
-ENTRYPOINT ["/bin/bash", "-l", "-c"]
-CMD ["python3", "tensorflow_inference_server.py", "/var/models/fasterRCNN_08-26-withnotadams.pb"]
+ENTRYPOINT ["python3", "tensorflow_inference_server.py", "/var/models/fasterRCNN_08-26-withnotadams.pb"]
