--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -1,6 +1,19 @@
 # natcap/dam-inference-server:0.0.1
 FROM tensorflow/tensorflow:1.12.0-gpu-py3
 
+RUN apt-get update \
+&& apt-get install -y \
+    build-essential \
+    libspatialindex-c4v5 \
+    mercurial \
+&& rm -rf /var/lib/apt/lists/*
+
+RUN pip install --no-cache-dir \
+    numpy \
+    rtree \
+    scipy \
+    shapely
+
 COPY fasterRCNN_08-26-withnotadams.pb /var/models/fasterRCNN_08-26-withnotadams.pb
 COPY tensorflow_inference_server.py /workspace/tensorflow_inference_server.py
 WORKDIR /workspace
