installing flask and pillow

--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -9,7 +9,9 @@ RUN apt-get update \
 && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir \
+    flask \
     numpy \
+    pillow \
     rtree \
     scipy \
     shapely
