--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -1,5 +1,6 @@
 # natcap/dam-inference-server:0.0.1
-FROM tensorflow/tensorflow:1.12.0-gpu-py3
+#FROM tensorflow/tensorflow:1.12.0-gpu-py3
+FROM tensorflow/tensorflow:1.12.0-py3
 
 RUN apt-get update \
 && apt-get install -y \
