get the right version of pygeoprocessing and such for tensorflow

--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -1,12 +1,12 @@
-# natcap/dam-inference-server-cpu:0.0.1
-# FROM tensorflow/tensorflow:1.12.0-py3
-FROM therealspring/python-gdal:3.0.4
+# natcap/dam-inference-server-cpu:0.1.0
+FROM tensorflow/tensorflow:1.12.0-py3
 
 RUN apt-get update -qq && \
     apt-get install -y \
     emacs \
     libspatialindex-dev \
     python3-pip \
+    python3-gdal \
     postgresql-client \
     openssl \
     curl \
@@ -14,18 +14,12 @@ RUN apt-get update -qq && \
     && \
     rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install pygeoprocessing
+COPY requirements.txt /usr/local/workspace/
+RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
 
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
-# RUN pip3 install --no-cache-dir https://github.com/evdcush/TensorFlow-wheels/releases/download/tf-1.12.0-py37-cpu-westmere/tensorflow-1.12.0-cp37-cp37m-linux_x86_64.whl
-ENTRYPOINT /bin/bash
-
-# COPY requirements.txt /usr/local/workspace/
-# RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
-#
-# COPY tensorflow_inference_server.py /usr/local/workspace/
-# WORKDIR /usr/local/workspace
-# ENTRYPOINT [ \
-#     "python3", "tensorflow_inference_server.py", \
-#     "natgeo_dams_model_resnet50_csv_64.h5"]
-#
+COPY tensorflow_inference_server.py /usr/local/workspace/
+WORKDIR /usr/local/workspace
+ENTRYPOINT [ \
+    "python", "tensorflow_inference_server.py", \
+    "natgeo_dams_model_resnet50_csv_64.h5"]
