--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -16,7 +16,7 @@ RUN apt-get update -qq && \
 
 COPY requirements.txt /usr/local/workspace/
 RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
-
+RUN pip3 install pygeoprocessing==1.9.2 --no-deps
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
 COPY tensorflow_inference_server.py /usr/local/workspace/
 WORKDIR /usr/local/workspace
