--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -1,5 +1,6 @@
-# natcap/dam-inference-server-cpu:0.1.0
-FROM tensorflow/tensorflow:1.12.0-py3
+# natcap/dam-inference-server-cpu:0.0.1
+#FROM tensorflow/tensorflow:1.12.0-py3
+FROM tensorflow/tensorflow:1.15.4
 
 RUN apt-get update -qq && \
     apt-get install -y \
@@ -14,12 +15,16 @@ RUN apt-get update -qq && \
     && \
     rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt /usr/local/workspace/
-RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
-RUN pip3 install pygeoprocessing==1.9.2 --no-deps
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
-COPY tensorflow_inference_server.py /usr/local/workspace/
-WORKDIR /usr/local/workspace
-ENTRYPOINT [ \
-    "python", "tensorflow_inference_server.py", \
-    "natgeo_dams_model_resnet50_csv_64.h5"]
+
+COPY requirements.txt /usr/local/workspace/
+RUN pip3 install pygeoprocessing==1.9.2
+RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
+ENTRYPOINT /bin/bash
+#
+# COPY tensorflow_inference_server.py /usr/local/workspace/
+# WORKDIR /usr/local/workspace
+# ENTRYPOINT [ \
+#     "python3", "tensorflow_inference_server.py", \
+#     "natgeo_dams_model_resnet50_csv_64.h5"]
+#
