try installing tf 1.12.0

--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -20,11 +20,10 @@ COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
 COPY requirements.txt /usr/local/workspace/
 RUN pip3 install pygeoprocessing==1.9.2
 RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
-ENTRYPOINT /bin/bash
-#
-# COPY tensorflow_inference_server.py /usr/local/workspace/
-# WORKDIR /usr/local/workspace
-# ENTRYPOINT [ \
-#     "python3", "tensorflow_inference_server.py", \
-#     "natgeo_dams_model_resnet50_csv_64.h5"]
-#
+RUN pip3 install tensorflow==1.12.0
+COPY tensorflow_inference_server.py /usr/local/workspace/
+
+WORKDIR /usr/local/workspace
+ENTRYPOINT [ \
+    "python3", "tensorflow_inference_server.py", \
+    "natgeo_dams_model_resnet50_csv_64.h5"]
