--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -23,6 +23,11 @@ RUN pip3 install --no-cache-dir -r /usr/local/workspace/requirements.txt
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
 COPY tensorflow_inference_server.py /usr/local/workspace/
 
+RUN git clone https://github.com/fizyr/keras-retinanet.git /usr/local/keras-retinanet
+WORKDIR /usr/local/keras-retinanet
+RUN pip install . --user
+RUN echo export PATH=\$PATH:/root/.local/bin >> /root/.bashrc
+
 WORKDIR /usr/local/workspace
 ENTRYPOINT [ \
     "python3", "tensorflow_inference_server.py", \
