try a whole refactor of this docker image

--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -1,20 +1,42 @@
 # natcap/dam-inference-server-cpu:0.0.1
-#FROM tensorflow/tensorflow:1.12.0-py3
 FROM tensorflow/tensorflow:2.1.0-py3
 
-RUN apt-get update -qq && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+SHELL ["/bin/bash", "-c"]
+
+RUN apt-get update -y
+RUN apt-get install software-properties-common -y
+RUN add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+RUN apt-get update -y
+RUN apt-get install -y \
+    build-essential \
+    libspatialindex-c4v5 \
     emacs \
-    libspatialindex-dev \
-    python3-pip \
-    python3-gdal \
-    python3-opencv \
-    postgresql-client \
-    openssl \
-    curl \
-    git \
-    && \
-    rm -rf /var/lib/apt/lists/*
+    git
+
+RUN pip install --no-cache-dir \
+    Cython \
+    flask \
+    matplotlib \
+    numpy \
+    opencv-python-headless \
+    pillow \
+    Pillow \
+    pyyaml \
+    rtree \
+    scipy \
+    shapely \
+    pypng
+
+RUN apt-get install -y \
+    gdal-bin \
+    libgdal-dev \
+    python3-gdal
+
+RUN apt install -y \
+    libffi-dev \
+    python3-setuptools \
+    gcc \
+    python3-dev
 
 COPY requirements.txt /usr/local/workspace/
 RUN pip3 install --no-cache-dir pygeoprocessing==1.9.2
