--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -8,7 +8,7 @@ RUN apt-get update -y
 RUN apt-get install software-properties-common -y
 RUN add-apt-repository ppa:ubuntugis/ubuntugis-unstable
 RUN apt-get update -y
-RUN apt-get install -y \
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
     libspatialindex-c4v5 \
     libffi-dev \
