--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -13,7 +13,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     libspatialindex-c4v5 \
     libffi-dev \
     emacs \
-    opencv-python3-headless \
+    python3-opencv \
     python3-dev \
     git
 
