--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -29,9 +29,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
 #     python3-dev
 
 COPY requirements.txt /usr/local/workspace/
-RUN pip install -upgrade pip
-RUN pip install --no-cache-dir pygeoprocessing==1.9.2
-RUN pip install --no-cache-dir -r /usr/local/workspace/requirements.txt
+RUN pip install --upgrade pip
+RUN pip install pygeoprocessing==1.9.2
+RUN pip install -r /usr/local/workspace/requirements.txt
 
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
 COPY tensorflow_inference_server.py /usr/local/workspace/
