debugging by just installing up to keras

--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -21,20 +21,12 @@ RUN apt-get install -y \
     gdal-bin \
     libgdal-dev \
     python3-gdal
-#
-# RUN apt install -y \
-#     libffi-dev \
-#     python3-setuptools \
-#     gcc \
-#     python3-dev
 
-COPY requirements.txt /usr/local/workspace/
-RUN pip install --upgrade pip
-RUN pip install pygeoprocessing --no-deps
-RUN pip install -r /usr/local/workspace/requirements.txt
-
-COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
-COPY tensorflow_inference_server.py /usr/local/workspace/
+RUN apt install -y \
+    libffi-dev \
+    python3-setuptools \
+    gcc \
+    python3-dev
 
 RUN git clone https://github.com/fizyr/keras-retinanet.git /usr/local/keras-retinanet
 WORKDIR /usr/local/keras-retinanet
@@ -42,7 +34,17 @@ RUN git checkout 1d5f60bd69b2d79776b849bd0a02249c0d38d4b3
 RUN pip install . --user
 RUN echo export PATH=\$PATH:/root/.local/bin >> /root/.bashrc
 
-WORKDIR /usr/local/workspace
-ENTRYPOINT [ \
-    "python", "tensorflow_inference_server.py", \
-    "natgeo_dams_model_resnet50_csv_64.h5"]
+#COPY requirements.txt /usr/local/workspace/
+#RUN pip install --upgrade pip
+#RUN pip install pygeoprocessing==2.0.0 --no-deps
+#RUN pip install -r /usr/local/workspace/requirements.txt
+#
+#COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
+#COPY tensorflow_inference_server.py /usr/local/workspace/
+#
+#
+#WORKDIR /usr/local/workspace
+#ENTRYPOINT [ \
+#    "python", "tensorflow_inference_server.py", \
+#    "natgeo_dams_model_resnet50_csv_64.h5"]
+#
