--- a/docker-image/Dockerfile-cpu
+++ b/docker-image/Dockerfile-cpu
@@ -31,6 +31,7 @@ RUN apt install -y \
 RUN git clone https://github.com/fizyr/keras-retinanet.git /usr/local/keras-retinanet
 WORKDIR /usr/local/keras-retinanet
 RUN git checkout 1d5f60bd69b2d79776b849bd0a02249c0d38d4b3
+RUN pip install keras==2.3.1
 RUN pip install . --user
 RUN echo export PATH=\$PATH:/root/.local/bin >> /root/.bashrc
 
