--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -38,10 +38,16 @@ RUN pip install --upgrade pip
 RUN pip install pygeoprocessing==2.0.0 --no-deps
 RUN pip install -r /usr/local/workspace/requirements.txt
 
+WORKDIR /usr/local/gcloud-sdk
+RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-284.0.0-linux-x86_64.tar.gz && tar -xvzf google-cloud-sdk-284.0.0-linux-x86_64.tar.gz
+RUN ./google-cloud-sdk/install.sh
+RUN source /usr/local/gcloud-sdk/google-cloud-sdk/completion.bash.inc
+RUN source /usr/local/gcloud-sdk/google-cloud-sdk/path.bash.inc
+RUN echo "export PATH=$PATH:/usr/local/gcloud-sdk/google-cloud-sdk/bin" >> /root/.bashrc
+
+COPY natgeo-dams-1e56a9f3ab62.json /usr/local/workspace/
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
 COPY tensorflow_inference_server.py /usr/local/workspace/
 
 WORKDIR /usr/local/workspace
-ENTRYPOINT [ \
-    "python", "tensorflow_inference_server.py", \
-    "natgeo_dams_model_resnet50_csv_64.h5"]
+ENTRYPOINT [ "bash", "start_inference_server.sh" ]
