--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -8,23 +8,23 @@ RUN add-apt-repository ppa:ubuntugis/ubuntugis-unstable
 RUN apt-get update -y
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
-    libspatialindex-c4v5 \
-    libffi-dev \
-    emacs \
-    python3-opencv \
-    python3-dev \
-    git
-
-RUN apt-get install -y \
     gdal-bin \
-    libgdal-dev \
-    python3-gdal
-
-RUN apt install -y \
+    git
     libffi-dev \
+    libgdal-dev \
+    libspatialindex-c4v5 \
+    python3-dev \
+    python3-gdal \
+    python3-opencv \
     python3-setuptools \
-    gcc \
-    python3-dev
+    wget
+
+WORKDIR /usr/local/gcloud-sdk
+RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-284.0.0-linux-x86_64.tar.gz && tar -xvzf google-cloud-sdk-284.0.0-linux-x86_64.tar.gz
+RUN ./google-cloud-sdk/install.sh
+RUN source /usr/local/gcloud-sdk/google-cloud-sdk/completion.bash.inc
+RUN source /usr/local/gcloud-sdk/google-cloud-sdk/path.bash.inc
+RUN echo "export PATH=$PATH:/usr/local/gcloud-sdk/google-cloud-sdk/bin" >> /root/.bashrc
 
 RUN git clone https://github.com/fizyr/keras-retinanet.git /usr/local/keras-retinanet
 WORKDIR /usr/local/keras-retinanet
@@ -37,13 +37,6 @@ COPY requirements.txt /usr/local/workspace/
 RUN pip install --upgrade pip
 RUN pip install pygeoprocessing==2.0.0 --no-deps
 RUN pip install -r /usr/local/workspace/requirements.txt
-
-WORKDIR /usr/local/gcloud-sdk
-RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-284.0.0-linux-x86_64.tar.gz && tar -xvzf google-cloud-sdk-284.0.0-linux-x86_64.tar.gz
-RUN ./google-cloud-sdk/install.sh
-RUN source /usr/local/gcloud-sdk/google-cloud-sdk/completion.bash.inc
-RUN source /usr/local/gcloud-sdk/google-cloud-sdk/path.bash.inc
-RUN echo "export PATH=$PATH:/usr/local/gcloud-sdk/google-cloud-sdk/bin" >> /root/.bashrc
 
 COPY natgeo-dams-1e56a9f3ab62.json /usr/local/workspace/
 COPY natgeo_dams_model_resnet50_csv_64.h5 /usr/local/workspace/
