--- a/docker-image/Dockerfile-gpu
+++ b/docker-image/Dockerfile-gpu
@@ -9,7 +9,7 @@ RUN apt-get update -y
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
     gdal-bin \
-    git
+    git \
     libffi-dev \
     libgdal-dev \
     libspatialindex-c4v5 \
